--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         }
 
         nav {
-            max-width: 1200px;
+            max-width: 1600px;
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
@@ -118,16 +118,16 @@
             display: flex;
             justify-content: center;
             align-items: stretch;
-            padding: 40px 20px;
+            padding: 40px 32px;
         }
 
         .content-wrapper {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 40px;
-            max-width: 1100px;
+            gap: 48px;
+            max-width: 1600px;
             width: 100%;
-            align-items: start;
+            align-items: stretch;
         }
 
         .left-panel {
@@ -449,7 +449,7 @@
         }
 
         .footer-content {
-            max-width: 1200px;
+            max-width: 1600px;
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
